--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,20 @@
 	margin: 30px 0 0 0;
 }
 .container-forecast {}
+.formatted-forecast-wrapper {
+	padding:1px 1px 1px 1px; 
+}
+.label {
+	text-align: left;
+    padding: 0 0 0 2px;
+	width: 20%;
+	float: left;
+}
+.input-data {
+	text-align: center;
+	float:left;
+	padding: 0 10px 0 0;
+}
 
 /* Loading spinner absolute center on page */
 .loading {
